[gd_scene load_steps=10 format=3 uid="uid://cnoxnuahmblih"]

[ext_resource type="Script" path="res://Assets/Scripts/default_enemy.gd" id="1_dr1u2"]
[ext_resource type="Texture2D" uid="uid://cyw7jfbyimfsa" path="res://Art/dolphin/dolphin_attack_sheet.png" id="2_c5l1y"]

[sub_resource type="Animation" id="Animation_uy3hb"]
resource_name = "attack"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.55, 0.65, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_0cbox"]
length = 0.001

[sub_resource type="Animation" id="Animation_xmfl7"]
resource_name = "recover"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_khel7"]
_data = {
"RESET": SubResource("Animation_0cbox"),
"attack": SubResource("Animation_uy3hb"),
"recover": SubResource("Animation_xmfl7")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_egqc7"]
radius = 14.0357

[sub_resource type="CircleShape2D" id="CircleShape2D_h1jkx"]
radius = 20.025

[sub_resource type="CircleShape2D" id="CircleShape2D_3pr4b"]
radius = 25.0

[node name="default_enemy" type="CharacterBody2D"]
script = ExtResource("1_dr1u2")

[node name="enemySprite" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_c5l1y")
hframes = 6
frame = 3

[node name="enemyAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_khel7")
}

[node name="enemyCol" type="CollisionShape2D" parent="."]
position = Vector2(-3, -7)
shape = SubResource("CircleShape2D_egqc7")

[node name="enemyHurt" type="Area2D" parent="."]
visible = false
position = Vector2(-6, -5)

[node name="enemyHurtCollider" type="CollisionShape2D" parent="enemyHurt"]
position = Vector2(3, 0)
shape = SubResource("CircleShape2D_h1jkx")

[node name="enemyNav" type="NavigationAgent2D" parent="."]

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(31, 0)

[node name="hitboxCollision" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_3pr4b")
debug_color = Color(0.988235, 0, 0.317647, 0.419608)
